[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Font1t.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=4]
[ext_resource path="res://Script/PinMinigame.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[node name="PinMinigame" type="Node2D"]
position = Vector2( 0, -0.707115 )
script = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
anchor_bottom = 0.204
margin_left = 490.0
margin_top = 16.0
margin_right = 616.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.909804, 0.909804, 1, 1 )
text = "Type pin to 
activate
fog blower"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number1" type="Label" parent="."]
anchor_right = 1.0
margin_left = 495.009
margin_top = 94.5998
margin_right = 521.009
margin_bottom = 156.6
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number2" type="Label" parent="."]
anchor_right = 1.0
margin_left = 525.963
margin_top = 94.9967
margin_right = 551.963
margin_bottom = 156.997
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number3" type="Label" parent="."]
anchor_right = 1.0
margin_left = 556.918
margin_top = 94.5998
margin_right = 582.918
margin_bottom = 156.6
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number4" type="Label" parent="."]
anchor_right = 1.0
margin_left = 586.285
margin_top = 94.5998
margin_right = 612.285
margin_bottom = 156.6
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
